refactor: simplify test span handling and update tracing observation handlers and aspects.